cfn2.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. 
  Kittens Carousel Static Website will be deployed on Amazon Linux 2023 EC2 Instance with custom 
  security group which allows http connections on port 80 and ssh port 22 from anywhere. 
  Kittens Carousel Static Website is downloaded from my Public Github repository, then deployed on Apache Web Server.Resources:
  
CFNInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-08b5b3a93ed654d19
      InstanceType: t2.micro
      KeyName: awskey
      SecurityGroupIds:
        - CFNSecGroups
      Tags:
        - Key: Name
          Value: aws-first-CFN-instance

CFNSecGroups:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH and HTTP for CFN Instances
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: enable http port
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
          Description: enable ssh port
      Tags:
        - Key: Name
          Value: paul-first-CFN-sec-group

  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref mySecGrp
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd git
          systemctl start httpd
          systemctl enable httpd
          cd /var/www/html
          git clone https://github.com/emrebiyik/kittens-carousel-ec2.git
          cp -r kittens-carousel-ec2/static-web/* .
          rm -rf kittens-carousel-ec2
          systemctl restart httpd

Outputs:
  webSiteURL:
    Description: URL of website
    Value: !Sub
      - http://${PublicDNS}
      - PublicDNS: !GetAtt myWebServer.PublicDnsName
